syntax = "proto3";
package althea.onboarding.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/althea-net/althea-L1/x/onboarding/types";

// GenesisState defines the onboarding module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// Params holds parameters for the onboarding module
message Params {
  // enable onboarding IBC middleware
  bool enable_onboarding = 1;
  repeated string whitelisted_channels = 2;
}
